<resources>
    <string name="app_name">Mantis Notes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="main_title">All Notes</string>
    <string name="mantis">Mantis</string>
    <string name="sample_note">When you speak a language, you need to follow grammar rules
        and use commonly known vocabulary, otherwise nobody would under-
stand you. Similar idea applies to code. Each programming language has its
        syntax and if you violate that syntax, the compiler cannot
understand your code. Each language also comes with certain conventions
        (these do not matter to the compiler, but matter greatly to
humans reading the code). Following certain conventions when writing code
        makes it easier to read and to debug. For the benefit of
your code readers and your own, you should follow the coding conventions
        outlined in this document.</string>

    <string name="sample_time">6:20pm</string>
    <string name="home_fragment">Home</string>
    <string name="add_note_fragment">Add Note Fragment</string>
    <string name="note_title">Title</string>
    <string name="sample_title">Sample Title</string>
    <string name="text_empty_message">
        <![CDATA[No notes added. Tap the <font color=\'#FF4081\'>+</font>
        button to create a note.]]>
    </string>
    <string name="my_email">odhiambomichaelallan@gmail.com</string>
    <string name="home">Home</string>
    <string name="frequently_used_fragment">Frequently Used</string>
    <string name="frequent">Frequent</string>
    <string name="no_notes">No notes</string>
    <string name="trash">Trash</string>
    <string name="settings">Settings</string>
    <string name="archive">Archive</string>

    <string name="edit">Edit</string>
    <string name="sort">Sort</string>
    <string name="view">View</string>
    <string name="grid">Grid</string>
    <string name="list">List</string>
    <string name="simple_list">Simple List</string>
</resources>