<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view" >

    <group
        android:id="@+id/menu_top"
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home_icon"
            android:title="@string/home" />

        <item
            android:id="@+id/nav_frequently_used"
            android:icon="@drawable/frequent_icon"
            android:title="@string/frequent" />
    </group>

    <group
        android:id="@+id/menu_bottom"
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_trash"
            android:icon="@drawable/trash_icon"
            android:title="@string/trash" />
    </group>

</menu>