<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/note_card_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardCornerRadius="12dp"
        app:circularflow_defaultRadius="@dimen/cardview_default_radius"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/note_text_view"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:textSize="5dp"
            android:padding="10dp"
            tools:text="@string/sample_note" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/note_title_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="15sp"
        android:maxLines="2"
        android:fontFamily="@font/abeezee"
        app:layout_constraintStart_toEndOf="@id/note_card_view"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/sample_title"/>

    <TextView
        android:id="@+id/note_description_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="15sp"
        android:maxLines="2"
        android:fontFamily="@font/abeezee"
        app:layout_constraintStart_toEndOf="@id/note_card_view"
        app:layout_constraintTop_toBottomOf="@id/note_title_text_view"
        tools:text="@string/sample_note" />

    <TextView
        android:id="@+id/time_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="15sp"
        android:paddingBottom="10sp"
        android:fontFamily="@font/abeezee"
        app:layout_constraintTop_toBottomOf="@id/note_description_text_view"
        app:layout_constraintStart_toEndOf="@id/note_card_view"
        tools:text="@string/sample_time"/>

</androidx.constraintlayout.widget.ConstraintLayout>